# crypt-2-hw

./: CMakeLists.txt  README.md  main.cpp
project/include/: HCR_funcs.h  crypt.h  sig.h
project/src/: HCR_funcs.cpp  crypt.cpp  sig.cpp
